added js counting function to heart button

--- a/index.css
+++ b/index.css
@@ -126,5 +126,19 @@ header {
      width: 100%;
  }
  
+ #vanGogh-heart {
+    border-style: none;
+    background: #ffffff;
+ }
+
+ #courbet-heart {
+    border-style: none;
+    background: #ffffff;
+ }
+
+ #ducreux-heart {
+    border-style: none;
+    background: #ffffff;
+ }
  
 
