added color heart and js update
updates like count/value in object/array

--- a/index.css
+++ b/index.css
@@ -48,7 +48,12 @@ body {
 
 .icon-btn:hover, 
 .icon-btn:focus {
-    opacity: 50%;
+    opacity: 50%;   
+}
+
+.heart:hover, 
+.heart:focus {
+    content:url("images/heart-color.png"); 
 }
 
 .likes {
